--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: azure-iot-edge # you probably want to 'snapcraft register <name>'
+name: azure-iot-edge-runtime # you probably want to 'snapcraft register <name>'
 #base: core18 # the base snap is the execution environment for this snap
 version: 'v2-preview' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Snap for Azure IoT-Edge v2
